fixed bug of too large noise field

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,6 +103,7 @@ h2 {
 }
 #canvas_container {
     align-items: center;
+    position: relative;
 }
 
 #image_container {
